add record first draft

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div id="root"></div>
 </body>
 
+<script src="assets/tinymce.min.js"></script>
 <script src="dist/bundle.js"></script>
 <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
 
