order dans liste, debut style liste

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -11,6 +12,10 @@
 <body>
   <div id="root"></div>
 </body>
+
+<script>
+	window.GreenSockGlobals = window.GreenSockGlobals || {};
+</script>
 
 <script src="assets/tinymce.min.js"></script>
 <script src="dist/bundle.js"></script>
