--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	// console.log(g);
 }(window,document,'script'));
 </script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 <script src="assets/tinymce/tinymce.min.js"></script>
 <script src="assets/lagrange/tinymce/freestone/plugin.js"></script>
 <script src="dist/bundle.js"></script>
