--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Freestone</title>
+	<meta name="robots" content="noindex, nofollow">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Freestone</title>
 </head>
 
 <body>
