trailing slashes and cache prevent

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 <!--<script src="https://apis.google.com/js/api.js"></script>-->
 <script src="assets/tinymce/tinymce.min.js"></script>
 <script src="assets/lagrange/tinymce/freestone/plugin.js"></script>
-<script src="dist/bundle.js"></script>
+<script src="dist/bundle.js?r=8"></script>
 
 </html>
