--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 	<script src="https://apis.google.com/js/client.js"></script>
 	<script src="assets/tinymce/tinymce.min.js"></script>
 	<script src="assets/lagrange/tinymce/freestone/plugin.js"></script>
+	<script src="http://demoadmin.freestone.lol/c/demoadmin/js/admin.js"></script>
 
 </head>
 
