--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 		window.GreenSockGlobals = window.GreenSockGlobals || {};
 	</script>
 	<script src="https://apis.google.com/js/client.js"></script>
-	<script src="/assets/tinymce/tinymce.min.js"></script>
-	<script src="/assets/lagrange/tinymce/freestone/plugin.js"></script>
+	<script src="assets/tinymce/tinymce.min.js"></script>
+	<script src="assets/lagrange/tinymce/freestone/plugin.js"></script>
 
 </head>
 
