--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
 	
-	<title>Freestone blablabla</title>
+	<title>Freestone</title>
 
 	<script>
 		window.GreenSockGlobals = window.GreenSockGlobals || {};
